--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</p>
 
 				<p>
-					ArchiVision is an Assistive AI and Enhanced Metadata system that harnesses a variety of AI technologies.
+					ArchiVision is an AI Extended Metadata and Assistive AI system that harnesses a variety of AI technologies.
 				</p>
 				
 				<p>
