--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 				</p>
 
 				<p>
-					ArchiVision is an AI Extended Metadata and Assistive AI system that harnesses a variety of AI technologies.
+					ArchiVision is an AI Extended Metadata and Assistive AI system<br />
+					that harnesses a variety of AI technologies to generate<br />
+					extended metadata and assistive descriptions from the image itself.
 				</p>
 				
 				<p>
