--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ArchiVision - AI Extended Metadata + Assistive AI for Archive Images</title>
+    <title>ArchiVision - AI Extended Metadata + AI Assistive Technology for Archive Images</title>
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/flatly/bootstrap.min.css" rel="stylesheet" />
     <link href="css/sticky-footer.css" rel="stylesheet" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">ArchiVision - AI Extended Metadata + Assistive AI for Archive Images</a>
+            <a class="navbar-brand" href="index.html">ArchiVision - AI Extended Metadata + AI Assistive Technology for Archive Images</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -29,14 +29,14 @@
 				</p>
 
 				<p>
-					ArchiVision is an AI Extended Metadata and Assistive AI system<br />
+					ArchiVision is an AI Extended Metadata and AI Assistive Technology system<br />
 					that harnesses a variety of AI technologies to generate<br />
 					extended metadata and assistive descriptions from the image itself.
 				</p>
 				
 				<p>
 					It draws upon the precision of Azure AI's Computer Vision,<br />
-					the creativity of generative AI powered by OpenAI,<br />
+					the creativity of Open AI's Large Language Models,<br />
 					and the eloquence of Azure AI's Speech Services.
 				</p>
 				
