--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 				</p>
 				
 				<p>
-					It draws upon the precision of Azure AI's Computer Vision,<br />
-					the creativity of Open AI's Large Language Models,<br />
-					and the eloquence of Azure AI's Speech Services.
+					It is powered by the precision of Azure AI's Computer Vision,<br />
+					the expressiveness of Open AI's Large Language Models,<br />
+					and the articulation of Azure AI's Speech Services.
 				</p>
 				
 				<p>
